transformed notebooks into modules, created class with the gap rules

--- a/scripts/IS_agent/N04_nlp_rules.ipynb
+++ b/scripts/IS_agent/N04_nlp_rules.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "f4930e0a",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Engine initialized with 2 facts\n",
+      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n",
+      "\n",
+      "=== TIRE DEGRADATION ANALYSIS ===\n",
+      "Using first predicted rate as current degradation: 0.07\n",
+      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
+      "Engine now has 4 facts\n",
+      "\n",
+      "=== LAP TIME PREDICTION ===\n",
+      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
+      "Engine now has 5 facts\n",
+      "\n",
+      "=== RADIO ANALYSIS ===\n",
+      "Radio fact declared: <f-5>\n",
+      "Engine now has 6 facts\n",
+      "\n",
+      "=== ALL ENGINE FACTS ===\n",
+      "Fact 1: InitialFact - <f-0>\n",
+      "Fact 2: RaceStatusFact - <f-1>\n",
+      "Fact 3: DegradationFact - <f-2>\n",
+      "Fact 4: TelemetryFact - <f-3>\n",
+      "Fact 5: TelemetryFact - <f-4>\n",
+      "Fact 6: RadioFact - <f-5>\n",
       "Libraries and fact classes loaded successfully.\n"
      ]
     }
@@ -132,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "076bccc2",
    "metadata": {},
    "outputs": [
@@ -150,7 +173,7 @@
       "    • \"Box this lap for softs,\"\n",
       "  WEATHER:\n",
       "    • \"there's rain expected in 10 minutes\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132414.json\n"
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191753.json\n"
      ]
     }
    ],
@@ -171,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "32582e52",
    "metadata": {},
    "outputs": [
@@ -179,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing json from: ../../outputs/week4/json/radio_analysis_20250409_132414.json\n"
+      "Processing json from: ../../outputs/week4/json/radio_analysis_20250417_191753.json\n"
      ]
     }
    ],
@@ -209,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "id": "501aabec",
    "metadata": {},
    "outputs": [
@@ -242,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "32cdf217",
    "metadata": {},
    "outputs": [
@@ -275,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "dcf60c5f",
    "metadata": {},
    "outputs": [
@@ -325,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "b08dbe7b",
    "metadata": {},
    "outputs": [],
@@ -530,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "bd58af07",
    "metadata": {},
    "outputs": [],
@@ -632,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "72e9aa65",
    "metadata": {},
    "outputs": [
@@ -660,8 +683,8 @@
       "  TECHNICAL_ISSUE:\n",
       "    • \"the\"\n",
       "    • \"rear feels terrible\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132421.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_132421.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191800.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250417_191800.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
@@ -710,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "id": "d4f41702",
    "metadata": {},
    "outputs": [
@@ -735,8 +758,8 @@
       "    • \"track is getting wet\"\n",
       "  WEATHER:\n",
       "    • \"rain starting\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132429.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_132429.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191807.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250417_191807.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: neutral\n",
@@ -781,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "b462e585",
    "metadata": {},
    "outputs": [
@@ -806,8 +829,8 @@
       "    • \"Safety\"\n",
       "  PIT_CALL:\n",
       "    • \"box box box\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132436.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_132436.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250417_191813.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250417_191813.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
@@ -852,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "id": "e5a6d1bb",
    "metadata": {},
    "outputs": [
