--- a/scripts/IS_agent/N05_gap_rules.ipynb
+++ b/scripts/IS_agent/N05_gap_rules.ipynb
@@ -158,7 +158,7 @@
     "from experta import DefFacts, Fact, Field, KnowledgeEngine      # Core Experta classes\n",
     "fastf1.Cache.enable_cache('../../f1-strategy/f1_cache')\n",
     "\n",
-    "import utils.N01_agent_setup as agent_setup\n",
+    "\n",
     "from utils.N01_agent_setup import (\n",
     "        TelemetryFact,              # For storing car performance data\n",
     "        DegradationFact,            # For storing tire degradation information\n",
@@ -717,7 +717,300 @@
    "id": "d6254ae9",
    "metadata": {},
    "source": [
-    "## 3. Defining the gap rules"
+    "## 3. Defining the gap rules\n",
+    "\n",
+    "\n",
+    "In this section, we'll implement rules that analyze the time gaps between cars to make strategic recommendations. These gap-based rules are critical for:\n",
+    "\n",
+    "1. **Identifying Undercut Opportunities**: When a car should pit early to gain track position\n",
+    "2. **Defensive Strategy**: When a car should respond to potential undercuts from behind\n",
+    "3. **Overcut Potential**: When staying out longer on old tires might be advantageous\n",
+    "4. **Traffic Management**: Avoiding exiting the pits into slower traffic\n",
+    "\n",
+    "Gap analysis is one of the most important aspects of F1 strategy, as positions are often gained and lost through pit stop timing rather than on-track overtaking, especially on circuits where passing is difficult.\n",
+    "\n",
+    "Our implementation will follow the same pattern as our other rule components, with gap data being processed into GapFact objects that our rules will then analyze."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "517cb60f",
+   "metadata": {},
+   "source": [
+    "### 3.1 Description of Gap-Based Rules\n",
+    "\n",
+    "#### Rule 1: Undercut Opportunity\n",
+    "- **Condition**: Gap to car ahead < 2.0s AND tire degradation rate > 0.12 AND tire age > 8 laps\n",
+    "- **Action**: Recommend performing an undercut (pitting before the car ahead)\n",
+    "- **Rationale**: When following closely but unable to overtake, fresh tires can provide enough performance advantage to pass after the other car pits\n",
+    "- **Confidence**: 0.8 (80%)\n",
+    "\n",
+    "#### Rule 2: Defensive Pit Stop\n",
+    "- **Condition**: Gap to car behind < 2.5s AND gap is decreasing AND tire degradation rate > 0.1\n",
+    "- **Action**: Recommend a defensive pit stop to protect position\n",
+    "- **Rationale**: When being followed closely by a faster car, pitting first prevents being undercut\n",
+    "- **Confidence**: 0.75 (75%)\n",
+    "\n",
+    "#### Rule 3: Strategic Overcut\n",
+    "- **Condition**: Gap to car ahead < 3.5s AND predicted lap time < car ahead's lap time AND tire degradation rate < 0.1\n",
+    "- **Action**: Recommend staying out longer (overcut strategy)\n",
+    "- **Rationale**: When tires are still performing well and we have better pace, staying out while others pit can gain track position\n",
+    "- **Confidence**: 0.75 (75%)\n",
+    "\n",
+    "#### Rule 4: Traffic Management\n",
+    "- **Condition**: Potential to exit pits into slower traffic (cars that are about to be lapped)\n",
+    "- **Action**: Recommend adjusting pit window to avoid traffic\n",
+    "- **Rationale**: Exiting the pits behind slower cars can cost several seconds of race time, even if they're a lap down\n",
+    "- **Confidence**: 0.7 (70%)\n",
+    "\n",
+    "Each rule uses a combination of gap data and other telemetry information to make strategic recommendations at the optimal moment during a race."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b2b5a609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class F1GapRules(F1StrategyEngine):\n",
+    "    \"\"\"\n",
+    "    F1 Strategy rules based on gap analysis between cars.\n",
+    "    \n",
+    "    These rules analyze the time gaps between cars to make strategic recommendations\n",
+    "    for undercuts, overcuts, defensive stops, and traffic management.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ##################################### RULE 1: Undercut Opportunity\n",
+    "    @Rule(\n",
+    "        # Match GapFact for specific driver\n",
+    "        GapFact(driver_number=MATCH.driver_number),\n",
+    "        \n",
+    "        # Capture gap to car ahead\n",
+    "        GapFact(gap_ahead=MATCH.gap_ahead),\n",
+    "        \n",
+    "        # Check if gap is small enough for undercut\n",
+    "        TEST(lambda gap_ahead: gap_ahead is not None and gap_ahead < 2.0),\n",
+    "        \n",
+    "        # Capture degradation information\n",
+    "        DegradationFact(degradation_rate=MATCH.degradation_rate),\n",
+    "        \n",
+    "        # Check degradation rate is high enough to justify new tires\n",
+    "        TEST(lambda degradation_rate: degradation_rate > 0.12),\n",
+    "        \n",
+    "        # Capture tire age\n",
+    "        TelemetryFact(tire_age=MATCH.tire_age),\n",
+    "        \n",
+    "        # Check tire age is enough for a pit stop to make sense\n",
+    "        TEST(lambda tire_age: tire_age > 8),\n",
+    "        \n",
+    "        # Capture current lap for the recommendation\n",
+    "        RaceStatusFact(lap=MATCH.lap)\n",
+    "    )\n",
+    "    def undercut_opportunity(self, driver_number, gap_ahead, degradation_rate, tire_age, lap):\n",
+    "        \"\"\"\n",
+    "        Rule 1: Undercut Opportunity\n",
+    "        \n",
+    "        Identifies when a car is close enough to the car ahead (< 2.0s) but unable to pass,\n",
+    "        and tire degradation is high enough to justify pitting earlier for the performance\n",
+    "        advantage of fresh tires.\n",
+    "        \"\"\"\n",
+    "        # Debug output to show rule activation and conditions\n",
+    "        print(f\"Rule activated: undercut_opportunity\")\n",
+    "        print(f\"  - Driver: {driver_number}\")\n",
+    "        print(f\"  - Gap ahead: {gap_ahead:.2f}s\")\n",
+    "        print(f\"  - Degradation rate: {degradation_rate:.3f}\")\n",
+    "        print(f\"  - Tire age: {tire_age} laps\")\n",
+    "        \n",
+    "        # Create and declare the recommendation\n",
+    "        self.declare(\n",
+    "            StrategyRecommendation(\n",
+    "                action=\"perform_undercut\",\n",
+    "                confidence=0.8,  # 80% confidence as specified\n",
+    "                explanation=f\"Undercut opportunity detected. Gap to car ahead ({gap_ahead:.2f}s) is within undercut window and tire degradation ({degradation_rate:.3f}) suggests performance gain from fresh tires.\",\n",
+    "                priority=2,  # Medium-high priority\n",
+    "                lap_issued=lap\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Record that this rule was activated\n",
+    "        self.record_rule_fired(\"undercut_opportunity\")\n",
+    "    \n",
+    "    ##################################### RULE 2: Defensive Pit Stop\n",
+    "    @Rule(\n",
+    "        # Match GapFact for specific driver\n",
+    "        GapFact(driver_number=MATCH.driver_number),\n",
+    "        \n",
+    "        # Capture gap to car behind\n",
+    "        GapFact(gap_behind=MATCH.gap_behind),\n",
+    "        \n",
+    "        # Check if gap is small enough to be at risk\n",
+    "        TEST(lambda gap_behind: gap_behind is not None and gap_behind < 2.5),\n",
+    "        \n",
+    "        # Capture gap trend (negative means gap is closing)\n",
+    "        GapFact(gap_behind_trend=MATCH.gap_behind_trend),\n",
+    "        \n",
+    "        # Check if gap is decreasing\n",
+    "        TEST(lambda gap_behind_trend: gap_behind_trend is not None and gap_behind_trend < 0),\n",
+    "        \n",
+    "        # Capture degradation information\n",
+    "        DegradationFact(degradation_rate=MATCH.degradation_rate),\n",
+    "        \n",
+    "        # Check degradation rate is high enough to justify new tires\n",
+    "        TEST(lambda degradation_rate: degradation_rate > 0.1),\n",
+    "        \n",
+    "        # Capture current lap for the recommendation\n",
+    "        RaceStatusFact(lap=MATCH.lap)\n",
+    "    )\n",
+    "    def defensive_pit_stop(self, driver_number, gap_behind, gap_behind_trend, degradation_rate, lap):\n",
+    "        \"\"\"\n",
+    "        Rule 2: Defensive Pit Stop\n",
+    "        \n",
+    "        Identifies when a car has a car close behind (< 2.5s) with the gap decreasing,\n",
+    "        suggesting the need to pit to defend position before being undercut.\n",
+    "        \"\"\"\n",
+    "        # Debug output to show rule activation and conditions\n",
+    "        print(f\"Rule activated: defensive_pit_stop\")\n",
+    "        print(f\"  - Driver: {driver_number}\")\n",
+    "        print(f\"  - Gap behind: {gap_behind:.2f}s\")\n",
+    "        print(f\"  - Gap trend: {gap_behind_trend:.3f}s (negative means gap is closing)\")\n",
+    "        print(f\"  - Degradation rate: {degradation_rate:.3f}\")\n",
+    "        \n",
+    "        # Create and declare the recommendation\n",
+    "        self.declare(\n",
+    "            StrategyRecommendation(\n",
+    "                action=\"defensive_pit\",\n",
+    "                confidence=0.75,  # 75% confidence as specified\n",
+    "                explanation=f\"Defensive pit stop recommended. Car behind is closing ({gap_behind:.2f}s and decreasing) and may attempt an undercut. Tire degradation ({degradation_rate:.3f}) suggests fresh tires would improve pace.\",\n",
+    "                priority=2,  # Medium-high priority\n",
+    "                lap_issued=lap\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Record that this rule was activated\n",
+    "        self.record_rule_fired(\"defensive_pit_stop\")\n",
+    "    \n",
+    "    ##################################### RULE 3: Strategic Overcut\n",
+    "    @Rule(\n",
+    "        # Match GapFact for specific driver\n",
+    "        GapFact(driver_number=MATCH.driver_number),\n",
+    "        \n",
+    "        # Capture gap to car ahead\n",
+    "        GapFact(gap_ahead=MATCH.gap_ahead),\n",
+    "        \n",
+    "        # Check if gap is within overcut range\n",
+    "        TEST(lambda gap_ahead: gap_ahead is not None and gap_ahead < 3.5),\n",
+    "        \n",
+    "        # Capture current and predicted lap times\n",
+    "        TelemetryFact(lap_time=MATCH.current_lap_time, \n",
+    "                      predicted_lap_time=MATCH.predicted_lap_time),\n",
+    "        \n",
+    "        # Check if our predicted lap time is faster than current lap time\n",
+    "        # (as a proxy for being faster than the car ahead)\n",
+    "        TEST(lambda current_lap_time, predicted_lap_time: \n",
+    "             current_lap_time is not None and predicted_lap_time is not None and \n",
+    "             predicted_lap_time < current_lap_time),\n",
+    "        \n",
+    "        # Capture degradation information\n",
+    "        DegradationFact(degradation_rate=MATCH.degradation_rate),\n",
+    "        \n",
+    "        # Check degradation rate is low enough to stay out longer\n",
+    "        TEST(lambda degradation_rate: degradation_rate < 0.1),\n",
+    "        \n",
+    "        # Capture current lap for the recommendation\n",
+    "        RaceStatusFact(lap=MATCH.lap)\n",
+    "    )\n",
+    "    def strategic_overcut(self, driver_number, gap_ahead, current_lap_time, predicted_lap_time, \n",
+    "                          degradation_rate, lap):\n",
+    "        \"\"\"\n",
+    "        Rule 3: Strategic Overcut\n",
+    "        \n",
+    "        Identifies when staying out longer on current tires would be advantageous,\n",
+    "        particularly when the car ahead pits but our tire degradation is still low.\n",
+    "        \"\"\"\n",
+    "        # Debug output to show rule activation and conditions\n",
+    "        print(f\"Rule activated: strategic_overcut\")\n",
+    "        print(f\"  - Driver: {driver_number}\")\n",
+    "        print(f\"  - Gap ahead: {gap_ahead:.2f}s\")\n",
+    "        print(f\"  - Current lap time: {current_lap_time:.3f}s\")\n",
+    "        print(f\"  - Predicted lap time: {predicted_lap_time:.3f}s\")\n",
+    "        print(f\"  - Degradation rate: {degradation_rate:.3f}\")\n",
+    "        \n",
+    "        # Calculate projected time gain\n",
+    "        projected_gain = current_lap_time - predicted_lap_time\n",
+    "        \n",
+    "        # Create and declare the recommendation\n",
+    "        self.declare(\n",
+    "            StrategyRecommendation(\n",
+    "                action=\"perform_overcut\",\n",
+    "                confidence=0.75,  # 75% confidence as specified\n",
+    "                explanation=f\"Overcut opportunity detected. With good pace (projected {projected_gain:.2f}s gain per lap) and low tire degradation ({degradation_rate:.3f}), extending the stint could gain position when car ahead pits.\",\n",
+    "                priority=2,  # Medium-high priority\n",
+    "                lap_issued=lap\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Record that this rule was activated\n",
+    "        self.record_rule_fired(\"strategic_overcut\")\n",
+    "    \n",
+    "    ##################################### RULE 4: Traffic Management\n",
+    "    @Rule(\n",
+    "        # Match GapFact for specific driver\n",
+    "        GapFact(driver_number=MATCH.driver_number),\n",
+    "        \n",
+    "        # Capture race status to determine pit window\n",
+    "        RaceStatusFact(lap=MATCH.lap),\n",
+    "        \n",
+    "        # We need to match positions of other cars to detect traffic\n",
+    "        # This is a simplified version - actual implementation would need a more complex\n",
+    "        # estimation of post-pit position\n",
+    "        \n",
+    "        # For simplicity, we'll use the existence of slower cars ahead as a proxy\n",
+    "        # This could be cars being lapped or slower cars that pitted recently\n",
+    "        EXISTS(TelemetryFact(position=MATCH.slower_position, \n",
+    "                            lap_time=MATCH.slower_lap_time)),\n",
+    "        \n",
+    "        # Test if there are cars in positions that would create traffic after pit stop\n",
+    "        # In a real implementation, this would be much more complex with position estimation\n",
+    "        TEST(lambda driver_number, slower_position, slower_lap_time:\n",
+    "             # Simplified test: car more than 1 second slower\n",
+    "             slower_lap_time > 85.0)  # Assuming this is a threshold for slow cars\n",
+    "    )\n",
+    "    def traffic_management(self, driver_number, lap, slower_position, slower_lap_time):\n",
+    "        \"\"\"\n",
+    "        Rule 4: Traffic Management\n",
+    "        \n",
+    "        Detects potential traffic issues after a pit stop and recommends adjusting\n",
+    "        the pit window to avoid being stuck behind slower cars.\n",
+    "        \"\"\"\n",
+    "        # Debug output to show rule activation and conditions\n",
+    "        print(f\"Rule activated: traffic_management\")\n",
+    "        print(f\"  - Driver: {driver_number}\")\n",
+    "        print(f\"  - Current lap: {lap}\")\n",
+    "        print(f\"  - Potential traffic position: {slower_position}\")\n",
+    "        print(f\"  - Slower car lap time: {slower_lap_time:.3f}s\")\n",
+    "        \n",
+    "        # Create and declare the recommendation\n",
+    "        self.declare(\n",
+    "            StrategyRecommendation(\n",
+    "                action=\"adjust_pit_window\",\n",
+    "                confidence=0.7,  # 70% confidence as specified\n",
+    "                explanation=f\"Traffic detected in potential post-pit position. Recommend delaying or advancing pit stop by 1-2 laps to avoid slower traffic.\",\n",
+    "                priority=1,  # Lower priority than other strategic decisions\n",
+    "                lap_issued=lap\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Record that this rule was activated\n",
+    "        self.record_rule_fired(\"traffic_management\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61cadd01",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
