--- a/scripts/IS_agent/N02_degradation_time_rules.ipynb
+++ b/scripts/IS_agent/N02_degradation_time_rules.ipynb
@@ -46,9 +46,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engine initialized with 2 facts\n",
+      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n",
+      "\n",
+      "=== TIRE DEGRADATION ANALYSIS ===\n",
+      "Using first predicted rate as current degradation: 0.07\n",
+      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
+      "Engine now has 4 facts\n",
+      "\n",
+      "=== LAP TIME PREDICTION ===\n",
+      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
+      "Engine now has 5 facts\n",
+      "\n",
+      "=== RADIO ANALYSIS ===\n",
+      "Radio fact declared: <f-5>\n",
+      "Engine now has 6 facts\n",
+      "\n",
+      "=== ALL ENGINE FACTS ===\n",
+      "Fact 1: InitialFact - <f-0>\n",
+      "Fact 2: RaceStatusFact - <f-1>\n",
+      "Fact 3: DegradationFact - <f-2>\n",
+      "Fact 4: TelemetryFact - <f-3>\n",
+      "Fact 5: TelemetryFact - <f-4>\n",
+      "Fact 6: RadioFact - <f-5>\n"
+     ]
+    }
+   ],
    "source": [
     "# Import standard libraries\n",
     "import pandas as pd\n",
@@ -112,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -212,14 +242,6 @@
      "text": [
       "Successfully loaded data from ../../outputs/week5/tire_degradation_fuel_adjusted.csv\n",
       "Loaded degradation data:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_29832\\4014458323.py:78: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  df['PreviousRates'] = df.groupby(['DriverNumber', 'Stint']).apply(\n"
      ]
     },
     {
@@ -323,7 +345,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "9c8d82c0-14f5-4a31-b933-ac6d49705e9b",
+       "ref": "91b95152-b98f-480b-824f-deda57311480",
        "rows": [
         [
          "0",
@@ -645,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,16 +1313,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data and generating predictions...\n",
+      "Data loaded and validated: 1180 rows, 15 columns\n",
+      "Processing Medium tires (ID: 2)...\n",
+      "Processing Hard tires (ID: 3)...\n",
+      "  No laps with new tires for Hard, using TyreAge=2.0 as baseline\n",
+      "Processing Soft tires (ID: 1)...\n",
+      "  No laps with new tires for Soft, using TyreAge=2.0 as baseline\n",
+      "Degradation metrics successfully calculated\n",
+      "Processed data format: 16 features\n",
+      "Created 339 sequences of 5 laps each\n",
+      "Sequences by compound: {1: 158, 2: 147, 3: 34}\n",
+      "Using device: cuda\n",
+      "Global model loaded from: ../../outputs/week5/models\\tire_degradation_tcn.pth\n",
+      "Specialized model for compound 1 loaded\n",
+      "Specialized model for compound 2 loaded\n",
+      "Specialized model for compound 3 loaded\n",
+      "Models loaded: 1 global model and 3 specialized models\n",
+      "Prepared tensor for model: shape=torch.Size([339, 5, 16])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\victo\\Desktop\\Documents\\Tercer año\\Segundo Cuatrimestre\\Finales\\scripts\\ML_tyre_pred\\ML_utils\\N02_model_tire_predictions.py:550: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  global_model.load_state_dict(torch.load(\n",
+      "c:\\Users\\victo\\Desktop\\Documents\\Tercer año\\Segundo Cuatrimestre\\Finales\\scripts\\ML_tyre_pred\\ML_utils\\N02_model_tire_predictions.py:578: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  torch.load(model_path, map_location=device))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated ensemble predictions for 339 sequences\n",
+      "Formatted results: 1017 predictions for 20 drivers\n",
+      "Available drivers: [ 1  2  4 10 11 14 16 18 20 21 22 23 24 27 31 44 55 63 77 81]\n",
+      "\n",
+      "==================================================\n",
+      "TESTING DRIVER 1\n",
+      "==================================================\n",
+      "Using first predicted rate as current degradation: 1.4210000038146973\n",
+      "Running rule engine...\n",
+      "Rule activated: predicted_high_degradation_alert\n",
+      "  - First predicted rate: 1.421 (threshold: > 0.2)\n",
+      "  - Tire age: 26 (threshold: > 8)\n",
+      "Rule activated: high_degradation_pit_stop\n",
+      "  - Degradation rate: 1.421 (threshold: 0.3)\n",
+      "  - Tire age: 26 (threshold: 10)\n",
+      "\n",
+      "Generated 2 recommendations:\n",
+      "\n",
+      "Recommendation 1:\n",
+      "Action: consider_pit\n",
+      "Confidence: 0.8\n",
+      "Explanation: Model predicts critical degradation in upcoming laps (predicted rate: 1.421s/lap). Consider pit stop strategy.\n",
+      "Priority: 2\n",
+      "Lap issued: 26\n",
+      "\n",
+      "Recommendation 2:\n",
+      "Action: pit_stop\n",
+      "Confidence: 0.8\n",
+      "Explanation: High tire degradation rate detected (1.42 > 0.3) with significant tire age (26 laps)\n",
+      "Priority: 2\n",
+      "Lap issued: 26\n",
+      "\n",
+      "Triggered rules:\n",
+      "- predicted_high_degradation_alert (Lap 26)\n",
+      "- high_degradation_pit_stop (Lap 26)\n",
+      "\n",
+      "==================================================\n",
+      "TESTING DRIVER 44\n",
+      "==================================================\n",
+      "Using first predicted rate as current degradation: 1.1089999675750732\n",
+      "Running rule engine...\n",
+      "Rule activated: predicted_high_degradation_alert\n",
+      "  - First predicted rate: 1.109 (threshold: > 0.2)\n",
+      "  - Tire age: 19 (threshold: > 8)\n",
+      "Rule activated: high_degradation_pit_stop\n",
+      "  - Degradation rate: 1.109 (threshold: 0.3)\n",
+      "  - Tire age: 19 (threshold: 10)\n",
+      "\n",
+      "Generated 2 recommendations:\n",
+      "\n",
+      "Recommendation 1:\n",
+      "Action: consider_pit\n",
+      "Confidence: 0.8\n",
+      "Explanation: Model predicts critical degradation in upcoming laps (predicted rate: 1.109s/lap). Consider pit stop strategy.\n",
+      "Priority: 2\n",
+      "Lap issued: 19\n",
+      "\n",
+      "Recommendation 2:\n",
+      "Action: pit_stop\n",
+      "Confidence: 0.8\n",
+      "Explanation: High tire degradation rate detected (1.11 > 0.3) with significant tire age (19 laps)\n",
+      "Priority: 2\n",
+      "Lap issued: 19\n",
+      "\n",
+      "Triggered rules:\n",
+      "- predicted_high_degradation_alert (Lap 19)\n",
+      "- high_degradation_pit_stop (Lap 19)\n",
+      "\n",
+      "==================================================\n",
+      "TESTING DRIVER 16\n",
+      "==================================================\n",
+      "Using first predicted rate as current degradation: -0.2409999966621399\n",
+      "Running rule engine...\n",
+      "Rule activated: stint_extension_recommendation\n",
+      "  - Degradation rate: -0.241 (threshold: < 0.15)\n",
+      "  - First predicted rate: -0.2409999966621399 (threshold: < 0.20)\n",
+      "  - Tire age: 50 (threshold: > 12)\n",
+      "\n",
+      "Generated 1 recommendations:\n",
+      "\n",
+      "Recommendation 1:\n",
+      "Action: extend_stint\n",
+      "Confidence: 0.75\n",
+      "Explanation: Low tire degradation (-0.24) despite tire age (50 laps). Recommend extending the current stint to maximize advantage.\n",
+      "Priority: 1\n",
+      "Lap issued: 50\n",
+      "\n",
+      "Triggered rules:\n",
+      "- stint_extension_recommendation (Lap 50)\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage\n",
     "race_data_path = '../../outputs/week3/lap_prediction_data.csv'  \n",
     "models_path = '../../outputs/week5/models'  \n",
     "\n",
     "# Test with specific drivers (you can choose any driver numbers you want to test)\n",
-    "# results = test_multiple_drivers(race_data_path, models_path, driver_numbers=[1, 44, 16])\n",
+    "results = test_multiple_drivers(race_data_path, models_path, driver_numbers=[1, 44, 16])\n",
     "\n",
     "# Alternatively, to test all available drivers:\n",
     "# results = test_multiple_drivers(race_data_path, models_path)\n"
