finished gap rules and testing, converted also to module for using the funcitoons in other notebooks , merging to dev

--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,20 +899,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------------------------------------------------------------\n",
+    "# PREPROCESSING FUNCTION: CALCULATE GAP CONSISTENCY\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "def calculate_gap_consistency(gaps_df):\n",
+    "    \"\"\"\n",
+    "    Calculate how many consecutive laps a driver has been in the same gap window.\n",
+    "    \n",
+    "    This function adds two columns to the dataframe:\n",
+    "    - consistent_gap_ahead_laps: Number of consecutive laps with gap_ahead in the same window\n",
+    "    - consistent_gap_behind_laps: Number of consecutive laps with gap_behind in the same window\n",
+    "    \n",
+    "    Args:\n",
+    "        gaps_df (DataFrame): DataFrame with gap data\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame: The same DataFrame with added consistency columns\n",
+    "    \"\"\"\n",
+    "    print(\"Calculating gap consistency across laps...\")\n",
+    "    \n",
+    "    # Define the gap windows we care about\n",
+    "    def get_ahead_window(gap):\n",
+    "        if gap < 2.0:\n",
+    "            return \"undercut_window\"\n",
+    "        elif 2.0 <= gap < 3.5:\n",
+    "            return \"overcut_window\"\n",
+    "        else:\n",
+    "            return \"out_of_range\"\n",
+    "    \n",
+    "    def get_behind_window(gap):\n",
+    "        if gap < 2.0:\n",
+    "            return \"defensive_window\"\n",
+    "        else:\n",
+    "            return \"safe_window\"\n",
+    "    \n",
+    "    # Add window classification columns\n",
+    "    gaps_df['ahead_window'] = gaps_df['GapToCarAhead'].apply(get_ahead_window)\n",
+    "    gaps_df['behind_window'] = gaps_df['GapToCarBehind'].apply(get_behind_window)\n",
+    "    \n",
+    "    # Initialize consistency columns\n",
+    "    gaps_df['consistent_gap_ahead_laps'] = 1\n",
+    "    gaps_df['consistent_gap_behind_laps'] = 1\n",
+    "    \n",
+    "    # Process each driver separately\n",
+    "    for driver in gaps_df['DriverNumber'].unique():\n",
+    "        driver_data = gaps_df[gaps_df['DriverNumber'] == driver].sort_values('LapNumber')\n",
+    "        \n",
+    "        # Skip if less than 2 laps of data\n",
+    "        if len(driver_data) < 2:\n",
+    "            continue\n",
+    "        \n",
+    "        # Process consistency of ahead gap\n",
+    "        for i in range(1, len(driver_data)):\n",
+    "            current_idx = driver_data.iloc[i].name\n",
+    "            prev_idx = driver_data.iloc[i-1].name\n",
+    "            \n",
+    "            if driver_data.iloc[i]['ahead_window'] == driver_data.iloc[i-1]['ahead_window']:\n",
+    "                gaps_df.loc[current_idx, 'consistent_gap_ahead_laps'] = gaps_df.loc[prev_idx, 'consistent_gap_ahead_laps'] + 1\n",
+    "            \n",
+    "            if driver_data.iloc[i]['behind_window'] == driver_data.iloc[i-1]['behind_window']:\n",
+    "                gaps_df.loc[current_idx, 'consistent_gap_behind_laps'] = gaps_df.loc[prev_idx, 'consistent_gap_behind_laps'] + 1\n",
+    "    \n",
+    "    print(\"Gap consistency calculation complete!\")\n",
+    "    return gaps_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform_gap_data(gaps_df, driver_number):\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "# UPDATE THE TRANSFORM FUNCTION TO INCLUDE CONSISTENCY\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "def transform_gap_data_with_consistency(gaps_df, driver_number):\n",
     "    \"\"\"\n",
-    "    Transform gap data from FastF1 into facts for the rule engine.\n",
-    "    \n",
-    "    Args:\n",
-    "        gaps_df (DataFrame): DataFrame with gap data\n",
-    "        driver_number (int): The driver number to extract data for\n",
-    "        \n",
-    "    Returns:\n",
-    "        GapFact: Fact with gap information\n",
+    "    Enhanced version of transform_gap_data that includes consistency metrics\n",
     "    \"\"\"\n",
     "    # Filter data for the specific driver\n",
     "    driver_data = gaps_df[gaps_df['DriverNumber'] == driver_number]\n",
@@ -922,19 +989,46 @@
     "        return None\n",
     "    \n",
     "    # Get the most recent gap data\n",
-    "    latest_data = driver_data.iloc[-1]\n",
+    "    latest_data = driver_data.sort_values('LapNumber', ascending=False).iloc[0]\n",
     "    \n",
-    "    # Create the gap fact with available information\n",
+    "    # Handle car ahead number conversion safely\n",
+    "    try:\n",
+    "        car_ahead_val = latest_data.get('CarAheadNumber', 0)\n",
+    "        # If it's \"Leader\" or another non-numeric string, use a placeholder value\n",
+    "        if isinstance(car_ahead_val, str) and not car_ahead_val.isdigit():\n",
+    "            car_ahead = -1  # Use -1 to represent the leader \n",
+    "        else:\n",
+    "            car_ahead = int(car_ahead_val) if not pd.isna(car_ahead_val) else -1\n",
+    "    except (ValueError, TypeError):\n",
+    "        print(f\"Warning: Could not convert CarAheadNumber '{car_ahead_val}' to int. Using -1.\")\n",
+    "        car_ahead = -1\n",
+    "    \n",
+    "    # Handle car behind number conversion safely\n",
+    "    try:\n",
+    "        car_behind_val = latest_data.get('CarBehindNumber', 0)\n",
+    "        # If it's \"Tail\" or another non-numeric string, use a placeholder value\n",
+    "        if isinstance(car_behind_val, str) and not car_behind_val.isdigit():\n",
+    "            car_behind = -2  # Use -2 to represent the tail\n",
+    "        else:\n",
+    "            car_behind = int(car_behind_val) if not pd.isna(car_behind_val) else -2\n",
+    "    except (ValueError, TypeError):\n",
+    "        print(f\"Warning: Could not convert CarBehindNumber '{car_behind_val}' to int. Using -2.\")\n",
+    "        car_behind = -2\n",
+    "    \n",
+    "    # Check if consistency columns exist, if not, we need to calculate them\n",
+    "    if 'consistent_gap_ahead_laps' not in latest_data:\n",
+    "        print(\"Warning: consistency metrics not found in data. Ensure calculate_gap_consistency was called.\")\n",
+    "    \n",
+    "    # Create gap fact with safe type conversions\n",
     "    gap_fact = GapFact(\n",
     "        driver_number=int(driver_number),\n",
-    "        # Gap to car ahead (if available)\n",
     "        gap_ahead=float(latest_data.get('GapToCarAhead', 0.0)),\n",
-    "        # Gap to car behind (if available)\n",
     "        gap_behind=float(latest_data.get('GapToCarBehind', 0.0)),\n",
-    "        # Car numbers (if available)\n",
-    "        car_ahead=int(latest_data.get('CarAheadNumber', 0)) if not pd.isna(latest_data.get('CarAheadNumber', 0)) else None,\n",
-    "        car_behind=int(latest_data.get('CarBehindNumber', 0)) if not pd.isna(latest_data.get('CarBehindNumber', 0)) else None,\n",
-    "        # Undercut and DRS windows\n",
+    "        car_ahead=car_ahead,\n",
+    "        car_behind=car_behind,\n",
+    "        gap_to_leader=float(latest_data.get('GapToLeader', 0.0)),\n",
+    "        consistent_gap_ahead_laps=int(latest_data.get('consistent_gap_ahead_laps', 1)),\n",
+    "        consistent_gap_behind_laps=int(latest_data.get('consistent_gap_behind_laps', 1)),\n",
     "        in_undercut_window=bool(latest_data.get('InUndercutWindow', False)),\n",
     "        in_drs_window=bool(latest_data.get('InDRSWindow', False))\n",
     "    )\n",
@@ -944,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,9 +1182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engine initialized with 2 facts\n",
+      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an engine instance\n",
     "engine = F1StrategyEngine()\n",
@@ -1107,9 +1210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== TIRE DEGRADATION ANALYSIS ===\n",
+      "Using first predicted rate as current degradation: 0.07\n",
+      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
+      "Engine now has 4 facts\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. TIRE DEGRADATION EXAMPLE\n",
     "# --------------------------\n",
@@ -1142,9 +1257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== LAP TIME PREDICTION ===\n",
+      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
+      "Engine now has 5 facts\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. LAP TIME PREDICTION EXAMPLE\n",
     "# -----------------------------\n",
@@ -1176,9 +1302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== RADIO ANALYSIS ===\n",
+      "Radio fact declared: <f-5>\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. RADIO ANALYSIS EXAMPLE\n",
     "# -----------------------\n",
@@ -1223,9 +1359,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engine now has 6 facts\n",
+      "\n",
+      "=== ALL ENGINE FACTS ===\n",
+      "Fact 1: InitialFact - <f-0>\n",
+      "Fact 2: RaceStatusFact - <f-1>\n",
+      "Fact 3: DegradationFact - <f-2>\n",
+      "Fact 4: TelemetryFact - <f-3>\n",
+      "Fact 5: TelemetryFact - <f-4>\n",
+      "Fact 6: RadioFact - <f-5>\n"
+     ]
+    }
+   ],
    "source": [
     "# Final fact count\n",
     "print(f\"Engine now has {len(engine.facts)} facts\")\n",
